--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,12 +6,14 @@
 */
 {
   "files": [],
-  "references": [
-    {
+  "references": [{
       "path": "./tsconfig.app.json"
     },
     {
       "path": "./tsconfig.spec.json"
+    },
+    {
+      "experimentalDecorators": true
     }
-]
+  ]
 }
